# lab

./: .gitignore  README.md  coqui-test.py  lag.py  lg.py  main.py  mcp_client.py  mcp_server.py  prompty.py  pyproject.toml  simple_server.py  test.py
leetcodes/: 442-find_all_duplicates.py
one-offs/: 238.py  2747.py  2sum.py  2sum2.py  3sum.py  42.py  4sum.py  balancer.py  integer.lists  integerlist.py  longestpal.py  musings.py  quicksort.py  slidingwindow.py  test_quicksort.py
