[project]
name = "github-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coqui-tts>=0.27.1",
    "fastmcp>=2.12.3",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "sounddevice>=0.5.2",
]
